# capstone_ur5e_sim

./: README.md  frames_2025-10-29_14.20.23.gv
capstone_ur5e_sim/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
capstone_ur5e_sim/install/ur_cv_interfaces/share/ur_cv_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.xml
capstone_ur5e_sim/install/ur_cv_interfaces/share/ur_cv_interfaces/cmake/: ament_cmake_export_libraries-extras.cmake  export_ur_cv_interfaces__rosidl_generator_cExport.cmake  export_ur_cv_interfaces__rosidl_generator_pyExport-noconfig.cmake  rosidl_cmake-extras.cmake  ur_cv_interfaces__rosidl_typesupport_cppExport.cmake  ur_cv_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake
capstone_ur5e_sim/log/: latest_build
capstone_ur5e_sim/src/Universal_Robots_ROS2_Description/config/: initial_positions.yaml
capstone_ur5e_sim/src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/: CMakeLists.txt
capstone_ur5e_sim/src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/config/ur5e/: physical_parameters.yaml
capstone_ur5e_sim/src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/launch/: ur_sim_control.launch.py
capstone_ur5e_sim/src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/materials/scripts/: Elevator.material
capstone_ur5e_sim/src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/scripts/: initial_pose_commander.py
capstone_ur5e_sim/src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/ur_simulation_gazebo/: object_detection_node.py
capstone_ur5e_sim/src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/urdf/: ur_with_camera.urdf.xacro
capstone_ur5e_sim/src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/worlds/: elevator.world
capstone_ur5e_sim/src/ur_cv_moveit/: package.xml
install/: local_setup.sh  setup.ps1  setup.sh
install/ur_cv_interfaces/share/ur_cv_interfaces/: local_setup.sh  package.sh  package.zsh
install/ur_cv_moveit/share/ur_cv_moveit/: package.sh  (+4 more)
log/: latest_build
src/Universal_Robots_ROS2_Description/config/: initial_positions.yaml
src/Universal_Robots_ROS2_Description/urdf/: ur.urdf.xacro  ur_macro.xacro
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/: CMakeLists.txt  package.xml
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/config/: ur_controllers.yaml
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/config/ur5e/: default_kinematics.yaml  visual_parameters.yaml
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/launch/: ur5e_elevator.launch.py  ur_sim_control.launch.py  ur_sim_moveit.launch.py
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/materials/scripts/: Elevator.material
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/plugins/: elevator_button_plugin.cpp
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/ur_simulation_gazebo/: ur5e_controller_node.py
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/urdf/: ur_with_camera.urdf.xacro
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/worlds/: elevator.world
src/log/: latest_build
src/ur_cv_interfaces/: CMakeLists.txt
src/ur_cv_moveit/: package.xml  setup.cfg  setup.py
src/ur_cv_moveit/launch/: detect_and_move.launch.py
src/ur_cv_moveit/ur_cv_moveit/: button_detect_and_move.py  button_detection_node.py  button_press_action_node.py  camera_capture_node.py
(+273 files in other folders)
